ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.akaisme.click
    secretName: quickstart-example-tls
  rules:
  - host: www.akaisme.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-clusterip
            port:
              number: 80
